# Textural_Kinetics

./: .gitignore  CHANGELOG.md  CITATION.cff  INSTALL-LINUX.sh  INSTALL-MAC.command  INSTALL-WINDOWS.bat  NOTICE.md  README.md  START-Granularity.bat  START-Granularity.command  START-Granularity.sh  START-Temporal_Granularity.bat  START-Temporal_Granularity.command  START-Temporal_Granularity.sh  START-Textural_Kinetics.bat  START-Textural_Kinetics.command  START-Textural_Kinetics.sh  pyproject.toml  requirements-app.txt  requirements.txt  run_gui.bat
.circleci/: config.yml
docs/: CORPUS_REFERENCIA.md  ENGINEERING_95.md  FORMULAS.md  LIMITATIONS.md  MANUAL_METRICAS.md  MANUAL_TECNICO.md  MELHORAMENTO_util_tempo.md  METRIC_SEMANTICS.md  MUSICOLOGICAL_GOLDEN_VALUES_DECISION.md  MUSICOLOGICAL_REGRESSION_FIXTURES.md  OFFSET_AUDIT.md  README.md  TEST_QUALITY_AUDIT.md  current_rating.md
granular_v2/: __init__.py  activity_granularity.py  audit.py  config.py  event_rates.py  exceptions.py  fusion.py  granularity_mustextu.py  gui.py  gui_trajectory.py  gui_trajectory_common.py  gui_trajectory_image.py  heatmap_style.py  heatmaps.py  input_layer.py  loader.py  logging_config.py  measures.py  metadata.py  note_extraction.py  note_types.py  offsets.py  onset_extraction.py  partition_state.py  pipeline.py  plots.py  reports.py  run.py  temporal_density.py  timebase.py  timebase_parity.py  trajectory.py  util_tempo.py
installers/: README.md
tests/: conftest.py  test_audit_merge.py  test_auto_pick.py  test_coincidence_merge.py  test_config.py  test_corpus.py  test_event_rates.py  test_fusion.py  test_global_offsets_integration.py  (+19 more)
(+36 files in other folders)
